--- a/lab2_ui.html
+++ b/lab2_ui.html
@@ -19,10 +19,10 @@
     </script>
   </head>
   <body>
-    <div id="d590822b-e05c-492c-86c7-a2653918f52d" data-root-id="p1001" style="display: contents;"></div>
+    <div id="d8a2b9ce-f1c8-4c79-81ab-c373fc1ac70a" data-root-id="p1001" style="display: contents;"></div>
   
-    <script type="application/json" id="d34be26b-a96c-4983-bffb-8c06d5f3ef95">
-      {"3d94f348-3080-401a-8692-f43b856bf17c":{"version":"3.4.0","title":"Bokeh Application","roots":[{"type":"object","name":"FileInput","id":"p1001","attributes":{"accept":".jpg"}}]}}
+    <script type="application/json" id="f879bfd1-be47-4b7d-978d-25920eacd3c6">
+      {"5cdb073a-b958-4404-ba59-5ea27f902321":{"version":"3.4.0","title":"Bokeh Application","roots":[{"type":"object","name":"FileInput","id":"p1001","attributes":{"accept":""}}]}}
     </script>
     <script type="text/javascript">
       (function() {
@@ -30,8 +30,8 @@
           Bokeh.safely(function() {
             (function(root) {
               function embed_document(root) {
-              const docs_json = document.getElementById('d34be26b-a96c-4983-bffb-8c06d5f3ef95').textContent;
-              const render_items = [{"docid":"3d94f348-3080-401a-8692-f43b856bf17c","roots":{"p1001":"d590822b-e05c-492c-86c7-a2653918f52d"},"root_ids":["p1001"]}];
+              const docs_json = document.getElementById('f879bfd1-be47-4b7d-978d-25920eacd3c6').textContent;
+              const render_items = [{"docid":"5cdb073a-b958-4404-ba59-5ea27f902321","roots":{"p1001":"d8a2b9ce-f1c8-4c79-81ab-c373fc1ac70a"},"root_ids":["p1001"]}];
               root.Bokeh.embed.embed_items(docs_json, render_items);
               }
               if (root.Bokeh !== undefined) {
